Added charts to customers

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,9 +27,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "bootstrap3": "^3.3.5",
+    "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^2.0.3",
     "popper.js": "^1.14.1",
     "radweb": "^1.1.84",
