--- a/.gitignore
+++ b/.gitignore
@@ -271,6 +271,7 @@ __pycache__/
 /Northwind.Orders
 /Northwind.Products
 /NorthwindBase
+/NorthwindInterfaces
 /Northwind.sln
 /Northwind Full.sln
 /msbuild.xml
