--- a/FrontEnd/.vscode/tasks.json
+++ b/FrontEnd/.vscode/tasks.json
@@ -10,6 +10,20 @@
                 "$tsc-watch"
             ],
             "isBackground": true
+        },
+        {
+            "type": "npm",
+            "script": "build",
+            "problemMatcher": [
+                "$tsc"
+            ]
+        },
+        {
+            "type": "npm",
+            "script": "copyFilesToMVC",
+            "problemMatcher": [
+                "$tsc"
+            ]
         }
     ]
 }
