Improved component generation

--- a/FrontEnd/.vscode/tasks.json
+++ b/FrontEnd/.vscode/tasks.json
@@ -24,6 +24,11 @@
             "problemMatcher": [
                 "$tsc"
             ]
+        },
+        {
+            "type": "npm",
+            "script": "gc",
+            "problemMatcher": []
         }
     ]
 }
