Improved generate component

--- a/FrontEnd/.vscode/tasks.json
+++ b/FrontEnd/.vscode/tasks.json
@@ -27,7 +27,7 @@
         },
         {
             "type": "npm",
-            "script": "gc",
+            "script": "generate-component",
             "problemMatcher": []
         }
     ]
