--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "radweb-starterkit:build"
+            "browserTarget": "radweb-starterkit:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
