improved web config to show errors on validation also on remote server

--- a/WebDemo/Web.config
+++ b/WebDemo/Web.config
@@ -18,6 +18,7 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Detailed" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
