Jwt Authentication server side v1

--- a/WebDemo/WebDemo.csproj
+++ b/WebDemo/WebDemo.csproj
@@ -178,6 +178,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DataApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JWTHelper.cs" />
     <Compile Include="Controllers\ProfilerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
