--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "bootstrap3": "^3.3.5",
     "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
