--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.5",
+    "@angular/cli": "^7.3.5",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/chart.js": "^2.7.40",
