--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/bootstrap3/dist/css/bootstrap.min.css"
+              "node_modules/@remult/core/input-styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
