--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "copyFilesToMVC": "node   copyFilesToMVC.js",
-    "ngrok": "ngrok start -config ngrok.yml dataApi"
+    "ngrok": "ngrok start -config ngrok.yml dataApi",
+    "gc":"ng generate component --skipTests=true"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.1.0",
-    "@remult/core": "^1.0.4",
+    "@remult/core": "^1.0.32",
     "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
