--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -30,10 +30,10 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/@remult/core/input-styles.scss"
+              "node_modules/@remult/angular/input-styles.scss"
             ],
             "scripts": [],
-            "es5BrowserSupport": true
+            "aot": true
           },
           "configurations": {
             "production": {
@@ -45,8 +45,6 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -57,6 +55,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -141,5 +143,8 @@
       }
     }
   },
-  "defaultProject": "radweb-starterkit"
+  "defaultProject": "radweb-starterkit",
+  "cli": {
+    "analytics": false
+  }
 }
