--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,23 +14,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~7.3.7",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@auth0/angular-jwt": "3.0.0",
-    "@remult/core": "^1.0.49",
-    "chart.js": "^2.7.3",
+    "@angular/animations": "~11.2.10",
+    "@angular/cdk": "^11.2.9",
+    "@angular/common": "~11.2.10",
+    "@angular/compiler": "~11.2.10",
+    "@angular/core": "~11.2.10",
+    "@angular/forms": "~11.2.10",
+    "@angular/material": "^11.2.9",
+    "@angular/platform-browser": "~11.2.10",
+    "@angular/platform-browser-dynamic": "~11.2.10",
+    "@angular/router": "~11.2.10",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@remult/angular": "^2.5.6",
+    "@remult/core": "^2.5.4",
+    "chart.js": "^2.9.4",
     "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "ng2-charts": "^1.6.0",
+    "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^2.0.3",
     "path": "^0.12.7",
     "popper.js": "^1.14.1",
@@ -38,13 +38,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.1102.9",
+    "@angular/cli": "~11.2.9",
+    "@angular/compiler-cli": "~11.2.10",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
     "@types/jquery": "^3.2.16",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
@@ -52,13 +50,13 @@
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ngrok": "^2.2.23",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.5"
   }
 }
