--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,8 +25,7 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@auth0/angular-jwt": "^5.0.2",
-    "@remult/angular": "^3.1.2",
-    "@remult/core": "^3.1.2",
+    "@remult/angular": "^0.2.7",
     "chart.js": "^2.9.4",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
@@ -34,6 +33,7 @@
     "ngx-bootstrap": "^2.0.3",
     "path": "^0.12.7",
     "popper.js": "^1.14.1",
+    "remult": "^0.2.7",
     "rxjs": "~6.4.0",
     "zone.js": "~0.9.1"
   },
