--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,61 +1,45 @@
 {
-  "name": "front-end",
+  "name": "frontend",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "ngrok": "ngrok start dataApi"
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.8",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.8",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
-    "@remult/angular": "^0.9.26",
+    "@remult/angular": "^0.13.20",
     "chart.js": "^2.9.4",
-    "core-js": "^2.4.1",
-    "jquery": "^3.3.1",
-    "ng2-charts": "^2.4.2",
-    "ngx-bootstrap": "^2.0.3",
-    "path": "^0.12.7",
-    "popper.js": "^1.14.1",
-    "remult": "^0.9.26",
-    "rxjs": "~6.6.0",
+    "remult": "^0.13.28",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.8",
-    "@angular/cli": "~12.2.8",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/jquery": "^3.2.16",
+    "@angular-devkit/build-angular": "~13.3.7",
+    "@angular/cli": "~13.3.7",
+    "@angular/compiler-cli": "~13.3.0",
+    "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ngrok": "^2.2.23",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.2"
   }
 }
