--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,6 @@ __pycache__/
 /WebDemo/Views/Home/index.cshtml
 /publish
 /MVC/Angular
+/Northwind.Server
+/MVC/Controllers
+/FrontEnd/src/app/aviv
