added support for demo controller

--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -38,7 +38,7 @@
         </rule>
         
         <rule name="Map non-api URLs to the index.html - this to support our SPA routes">
-          <match url="^(dataapi/|home/).*$" negate="true" ignoreCase="true" />
+          <match url="^(dataapi/|home/|demo/).*$" negate="true" ignoreCase="true" />
           <action type="Rewrite" url="/Angular/index.html" />
         </rule>
         
