Updated to use front-end-dist and appApi route

--- a/.gitignore
+++ b/.gitignore
@@ -281,7 +281,7 @@ __pycache__/
 /WebDemo/Scripts/NGApp
 /WebDemo/Views/Home/index.cshtml
 /publish
-/MVC/Angular
+/MVC/frontend-dist-files
 /Northwind.Server
 /MVC/Controllers
 /FrontEnd/src/app/aviv
