--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -34,12 +34,12 @@
         </rule>
         <rule name="Map all requests with a '.' in to the 'build' directory" stopProcessing="true">
           <match url="^(.*[.].*)$" />
-          <action type="Rewrite" url="/Angular/{R:1}" />
+          <action type="Rewrite" url="/frontend-dist-files/{R:1}" />
         </rule>
         
         <rule name="Map non-api URLs to the index.html - this to support our SPA routes">
-          <match url="^(dataapi/|home/|demo/).*$" negate="true" ignoreCase="true" />
-          <action type="Rewrite" url="/Angular/index.html" />
+          <match url="^(dataapi/|appapi/|home/|demo/).*$" negate="true" ignoreCase="true" />
+          <action type="Rewrite" url="/frontend-dist-files/index.html" />
         </rule>
         
       </rules>
