--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -42,7 +42,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../MVC/Angular",
+            "outputPath": "../MVC/frontend-dist-files",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
