started work on data result

--- a/ENV.Web/ENV.Web.csproj
+++ b/ENV.Web/ENV.Web.csproj
@@ -75,6 +75,7 @@
     <Compile Include="DataApi.cs" />
     <Compile Include="DataList.cs" />
     <Compile Include="DataResult.cs" />
+    <Compile Include="FromJson.cs" />
     <Compile Include="IMyHttpContext.cs" />
     <Compile Include="MockFlow.cs" />
     <Compile Include="NameFixer.cs" />
