--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -11,37 +11,41 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="JwtKey" value=""/>
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <system.webServer>
-  <httpErrors errorMode="Detailed" />
+    <httpErrors errorMode="Detailed"/>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <remove name="OPTIONSVerbHandler"/>
+      <remove name="TRACEVerbHandler"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
-    <validation validateIntegratedModeConfiguration="false" />
-   
+    <validation validateIntegratedModeConfiguration="false"/>
     <rewrite>
       <rules>
         <rule name="Map empty URLs to the index.html">
-          <match url="^$" />
-          <action type="Rewrite" url="/index.html" />
+          <match url="^$"/>
+          <action type="Rewrite" url="/index.html"/>
         </rule>
         <rule name="Map all requests with a '.' in to the 'build' directory" stopProcessing="true">
-          <match url="^(.*[.].*)$" />
-          <action type="Rewrite" url="/frontend-dist-files/{R:1}" />
+          <match url="^(.*[.].*)$"/>
+          <action type="Rewrite" url="/frontend-dist-files/{R:1}"/>
         </rule>
-        
         <rule name="Map non-api URLs to the index.html - this to support our SPA routes">
-          <match url="^(dataapi/|appapi/|home/|demo/).*$" negate="true" ignoreCase="true" />
-          <action type="Rewrite" url="/frontend-dist-files/index.html" />
+          <match url="^(dataapi/|appapi/|home/|demo/).*$" negate="true" ignoreCase="true"/>
+          <action type="Rewrite" url="/frontend-dist-files/index.html"/>
         </rule>
-        
       </rules>
     </rewrite>
   </system.webServer>
