--- a/angular-vanilla/angular.json
+++ b/angular-vanilla/angular.json
@@ -17,7 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/angular-vanilla",
+            "outputPath": {
+              "base": "../MVC/frontend-dist-files",
+              "browser": ""
+            },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
